--- a/src/app.html
+++ b/src/app.html
@@ -14,6 +14,13 @@
 			rel="stylesheet"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!-- Open Graph tags -->
+		<meta property="og:title" content="jeffng50" />
+		<meta property="og:description" content="jeffng50 portfolio and blog site" />
+		<meta property="og:image" content="%sveltekit.assets%/images/jeffng50_blog.png" />
+		<meta property="og:url" content="http://www.jeffng50.xyz" />
+		<meta property="og:type" content="website" />
+		<title>jeffng50</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
