feat: add more meta tags in head

--- a/src/app.html
+++ b/src/app.html
@@ -14,13 +14,24 @@
 			rel="stylesheet"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!-- HTML Meta Tags -->
+		<title>jeffng50</title>
+		<meta name="description" content="jeffng50 portfolio and blog site" />
+		<!-- Google / Search Engine Tags -->
+		<meta itemprop="name" content="jeffng50" />
+		<meta itemprop="description" content="jeffng50 portfolio and blog site" />
+		<meta itemprop="image" content="https://jeffng50.xyz/./images/jeffng50_blog.png" />
 		<!-- Open Graph tags -->
+		<meta property="og:url" content="https://jeffng50.xyz" />
+		<meta property="og:type" content="website" />
 		<meta property="og:title" content="jeffng50" />
 		<meta property="og:description" content="jeffng50 portfolio and blog site" />
-		<meta property="og:image" content="%sveltekit.assets%/images/jeffng50_blog.png" />
-		<meta property="og:url" content="http://www.jeffng50.xyz" />
-		<meta property="og:type" content="website" />
-		<title>jeffng50</title>
+		<meta property="og:image" content="https://jeffng50.xyz/./images/jeffng50_blog.png" />
+		<!-- Twitter Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="jeffng50" />
+		<meta name="twitter:description" content="jeffng50 portfolio and blog site" />
+		<meta name="twitter:image" content="https://jeffng50.xyz/./images/jeffng50_blog.png" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
